# apotheca

./: .gitignore  Priorities.txt  README.md  apotheca.cabal  caligo.cabal  stack.yaml
exe/: Main.hs
exe/Apotheca/: Runtime.hs
exe/Apotheca/Runtime/: Commands.hs  Options.hs
exe/Caligo/: Runtime.hs
exe/Caligo/Runtime/: Commands.hs  Options.hs
src/: Caligo.hs
src/Apotheca/: Bytes.hs  Encodable.hs  Logs.hs  Misc.hs
src/Apotheca/Distributed/: Keyspace.hs
src/Apotheca/Integrations/: Fuse.hs
src/Apotheca/Repo/: Blocks.hs  Config.hs  Env.hs  Glob.hs  Ignore.hs  Internal.hs  MVar.hs  Manifest.hs  Monad.hs  Path.hs  Repo.hs  Types.hs  Watcher.hs
src/Apotheca/Security/: Auth.hs  Cipher.hs  Hash.hs
src/Caligo/: Bytes.hs  Encodable.hs  Logs.hs  Misc.hs
src/Caligo/Distributed/: Keyspace.hs
src/Caligo/Integrations/: Fuse.hs
src/Caligo/Repo/: Blocks.hs  Config.hs  Ignore.hs  Manifest.hs  Path.hs  Repo.hs  Types.hs  Watcher.hs
src/Caligo/Security/: Cipher.hs  Hash.hs
src/Experimental/: Backend.hs  Chord.hs  Process.hs
test/.caligo/: CONFIG  DISTRIBUTED  MANIFEST
