name:                apotheca
version:             0.1.0.0-alpha
synopsis:            Apotheca DHT - distributed data storage
description:         Please see README.md
homepage:            https://github.com/Apotheca/apotheca#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Author name here
maintainer:          chris@apotheca.io
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Apotheca.Bytes
    , Apotheca.Encodable
    , Apotheca.Logs
    , Apotheca.Misc
    -- , Apotheca.Distributed
    , Apotheca.Distributed.Keyspace
    -- , Apotheca.Integrations
    -- , Apotheca.Integrations.Fuse
    -- , Apotheca.Security
    , Apotheca.Security.Auth
    , Apotheca.Security.Hash
    , Apotheca.Security.Cipher
    -- , Apotheca.Repo
    , Apotheca.Repo.Blocks
    , Apotheca.Repo.Config
    , Apotheca.Repo.Env
    , Apotheca.Repo.Glob
    , Apotheca.Repo.Ignore
    , Apotheca.Repo.Manifest
    , Apotheca.Repo.Monad
    , Apotheca.Repo.MVar
    , Apotheca.Repo.Path
    -- , Apotheca.Repo.Repo
    , Apotheca.Repo.Internal
    , Apotheca.Repo.Watcher
  -- other-modules:
  build-depends:
    -- Base
      base >= 4.7 && < 5

    -- Data structures / monads
    , bytestring
    , containers
    , mtl
    , transformers
    , text

    -- Logging
    -- , logger -- Later when I have the time

    -- Mounting
    -- , HFuse

    -- Network
    -- , distributed-process >= 0.6.0
    -- , network
    -- , network-transport
    -- , network-transport-tcp >= 0.5.1

    -- OS
    , directory
    , filepath
    , time

    -- Security / hashing / one-way functions
    , cryptonite
    , memory
      -- `memory` is not just for cryptonite - see ScrubbedBytes

    -- Serialization / encoding / binary
    , aeson
    , aeson-pretty
    , base16-bytestring
    , base64-bytestring
    , bits-bytestring
    , cereal
    -- , pretty-show
    , Glob
    , yaml
    , zlib

    -- Watcher
    , fsnotify
  default-language:    Haskell2010

executable apo
  hs-source-dirs:      exe
  main-is:             Main.hs
  other-modules:
      Apotheca.Runtime
    , Apotheca.Runtime.Commands
    , Apotheca.Runtime.Options
    , Paths_apotheca
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- TODO: Add optimizations: -O2 -dynamic
  build-depends:
      base
    , apotheca
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , containers
    , directory
    , filepath
    , optparse-applicative
  default-language:
      Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/caligo
