name:                caligo
version:             0.1.0.0
synopsis:            Caligo DHT - distributed data storage
description:         Please see README.md
homepage:            https://github.com/githubuser/caligo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Caligo.Bytes
    , Caligo.Encodable
    , Caligo.Logs
    , Caligo.Misc
    -- , Caligo.Distributed
    , Caligo.Distributed.Keyspace
    -- , Caligo.Security
    , Caligo.Security.Hash
    , Caligo.Security.Cipher
    -- , Caligo.Repo
    , Caligo.Repo.Blocks
    , Caligo.Repo.Config
    , Caligo.Repo.Ignore
    , Caligo.Repo.Manifest
    , Caligo.Repo.Path
    , Caligo.Repo.Repo
    , Caligo.Repo.Types
    , Caligo.Repo.Watcher
  -- other-modules:
  build-depends:
    -- Base
      base >= 4.7 && < 5

    -- Data structures
    , bytestring
    , containers
    , text

    -- Logging
    -- , logger -- Later when I have the time

    -- Network
    , distributed-process >= 0.6.0
    , network
    , network-transport
    , network-transport-tcp >= 0.5.1

    -- OS
    , directory
    , filepath

    -- Security / hashing / one-way functions
    , cryptonite
    , memory
      -- `memory` is not just for cryptonite - see ScrubbedBytes

    -- Serialization / encoding / binary
    , aeson
    , aeson-pretty
    , base16-bytestring
    , base64-bytestring
    , bits-bytestring
    , cereal
    -- , pretty-show
    , Glob
    , yaml
    , zlib

    -- Watcher
    , fsnotify
  default-language:    Haskell2010

executable caligo
  hs-source-dirs:      exe
  main-is:             Main.hs
  other-modules:
      Caligo.Runtime
    , Caligo.Runtime.Commands
    , Caligo.Runtime.Options
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- TODO: Add optimizations: -O2 -dynamic
  build-depends:
      base
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , caligo
    , containers
    , directory
    , filepath
    , optparse-applicative
  default-language:
      Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/caligo
